# otp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
otp/: __init.py__  cli.py  mail.py  updater.py
suk/: __init.py__  cli.py  mail.py  updater.py
