[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "otp"
version = "1.0.0"
description = "Disposable temp-mail inbox straight from your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "curl-cffi>=0.6",
    "requests>=2.28",
]

[project.scripts]
otp = "otp.cli:main"

[project.urls]
Homepage = "https://github.com/forshaur/otp"
"Bug Tracker" = "https://github.com/forshaur/otp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["otp*"]